# comline

./: .gitignore  Cargo.toml  README.md
codelib-gen/: Cargo.toml  README.md
codelib-gen/_core/: Cargo.toml  README.md
codelib-gen/_core/src/: builder.rs  lib.rs  utils.rs
codelib-gen/_core/src/code_gen/: mod.rs
codelib-gen/_core/src/code_gen/rust/: _1_7_0.rs  mod.rs
codelib-gen/_core/src/code_gen/rust_abi_stable/: interface.rs  mod.rs
codelib-gen/_core/src/code_gen/rust_c_ffi/: mod.rs  tests.rs
codelib-gen/_core/src/lib_gen/: cargo.rs  mod.rs
codelib-gen/_core/src/lib_gen/rust/: cargo.rs  mod.rs
codelib-gen/_core/src/lib_gen/rust_c_ffi/: cargo.rs  mod.rs
codelib-gen/_core/tests/: mod.rs
codelib-gen/_core/tests/code_gen/: rust.rs
codelib-gen/_core/tests/lib_gen/: mod.rs  rust_c_ffi.rs
codelib-gen/c/: Cargo.toml
codelib-gen/c/src/code_gen/: _99.rs  mod.rs
codelib-gen/lua/: Cargo.toml
codelib-gen/lua/src/: lib.rs
codelib-gen/lua/src/code_gen/: mod.rs
codelib-gen/lua/src/lib_gen/: mod.rs
codelib-gen/lua/src/lib_gen/lua/: mod.rs
codelib-gen/lua/tests/: mod.rs
codelib-gen/lua/tests/__TEMP__/lua_test/: Cargo.toml
codelib-gen/luau/: Cargo.toml
codelib-gen/luau/src/: lib.rs
codelib-gen/luau/src/code_gen/: luau.rs  mod.rs
codelib-gen/python/: Cargo.toml
codelib-gen/python/src/code_gen/: _3_11_0.rs  mod.rs
codelib-gen/src/: lib.rs
codelib-gen/src/code_gen/: mod.rs
codelib-gen/src/code_gen/lua/: lib.lua
codelib-gen/src/code_gen/luau/: mod.rs
codelib-gen/src/code_gen/python/: _3_11_0.rs
codelib-gen/src/code_gen/rust/: mod.rs
codelib-gen/src/lib_gen/: cargo.rs  mod.rs
codelib-gen/src/lib_gen/c_lang/: cargo.rs  cbindgen.toml  mod.rs
codelib-gen/tests/: mod.rs
codelib-gen/tests/__data__/lua/src/: types.rs
codelib-gen/tests/__data__/lua/testcrate/: Cargo.toml
codelib-gen/tests/__data_gen__/c_lang/c99/: CMakeLists.txt  test.h
codelib-gen/tests/lib_gen/: rust_c_ffi.rs
core/: .gitignore  Cargo.toml  README.md
core/examples/: dev.ids  example.ids  greet.ids  simple.ids
core/examples/codegen/: simple_gen.rs
core/examples/imports/: ant.cls  food.cls  hole.cls
core/proposals/: enum_variant_associated_kind.ids  protocol_function_blanket_impl.ids  protocol_property_discoverable.ids
core/src/: codelib_gen.rs  lib.rs  report.rs
core/src/autodoc/: document.rs  mod.rs  schema.rs
core/src/lang_lib/: lang_items.rs
core/src/langlib/: lang_items.rs  mod.rs
core/src/package/: mod.rs
core/src/package/config/: mod.rs
core/src/package/config/idl/: constants.rs  idc.pest  parser_new.rs
core/src/package/config/ir/: context.rs  mod.rs
core/src/project/: mod.rs
core/src/project/idl/: ast.rs  mod.rs  parser.rs  parser_new.rs
core/src/project/ir/: context.rs  mod.rs
core/src/project/ir/compiler/: interpret.rs  mod.rs  report.rs
core/src/project/ir/diff/: mod.rs  report.rs  versioning.rs
core/src/project/ir/frozen/: mod.rs  (+1 more)
core/src/schema/: mod.rs
core/src/schema/idl/: constants.rs  idl.pest  mod.rs  parser.rs  parser_new.rs
core/src/schema/ir/: context.rs  mod.rs
core/src/utils/: codemap.rs  mod.rs  templating.rs
core/tests/: mod.rs
core/tests/autodoc/: mod.rs
core/tests/idl/: mod.rs  unit.rs
core/tests/idl/ir/: mod.rs
core/tests/idl/stdlib/: validators.rs
core/tests/package/: build.rs  compile.rs  mod.rs  parse.rs
core/tests/package_config/: build.rs  compile.rs  mod.rs  parse.rs
core/tests/schema/: simple.ids  unit.rs
core/tests/schema/stdlib/: mod.rs  validators.rs
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md  planning.md
docs/docs/codegen/: index.md
docs/docs/getting-started/: index.md
docs/docs/idl/: protocol.md  settings.md
docs/docs/ir/: cas.md
docs/docs/knowledge/: planning.md
docs/docs/knowledge/codegen/: index.md  runtime.md
docs/docs/knowledge/idl/: docstrings.md  enum.md  index.md  structure.md
docs/docs/knowledge/planning/: coge-generaiton.md  index.md  ir-generation.md
docs/docs/knowledge/proposals/: auto_documentation.md
docs/docs/knowledge/runtime/: index.md
docs/docs/planning/code-generation/: compiled-languages.md  index.md
docs/docs/proposals/: index.md
docs/docs/resources/: idl-rpc-projects.md
package-manager/: Cargo.toml  README.md
package-manager/src/: main.rs  tui.rs
package-manager/src/client/: dependency.rs  mod.rs  publish.rs  registry.rs
package-manager/src/manager/: dependencies.rs  mod.rs
package-manager/src/tests/client/: building.rs  dependencies.rs  mod.rs  registries.rs
package-server/: Cargo.toml  README.md
package-server/src/: main.rs
package-server/src/rest/: mod.rs  package.rs  publish.rs  user.rs
package-server/src/storage/: mod.rs  projects.rs  users.rs
package-server/src/web_ui/: mod.rs  package.rs  template.rs
package-server/templates/: index.html  package.html  packages.html
runtime-langs/lua/: Cargo.toml
runtime-langs/lua/src/: lib.rs
runtime-langs/lua/src/setup/: mod.rs
runtime-langs/lua/tests/: mod.rs
runtime-langs/lua/tests/jrpc_tcp/: consumer.lua  mod.rs
runtime-langs/luau/: Cargo.toml  comline-runtime.rockspec
runtime-langs/luau/src/: handler.rs
runtime-langs/luau/tests/: mod.rs
runtime/core/: Cargo.toml
runtime/core/examples/: jrpc_tcp_msgpack.rs
runtime/core/examples/jrpc_tcp/: client.rs  generated.rs  main.rs  server.rs
runtime/core/src/: lib.rs
runtime/core/src/package_abi/: interface.rs  mod.rs  user.rs
runtime/core/src/setup/: abstract_call.rs  handler.rs  mod.rs
runtime/core/tests/: mod.rs
runtime/core/tests/jrpc_tcp_msgpack/: client.rs  schemas.rs  server.rs
runtime/core/tests/setups/: mod.rs
runtime/core_no-std/: Cargo.toml
runtime/core_no-std/src/: lib.rs
runtime/core_no-std/src/call_system/: consumer.rs  default.rs  meta.rs  mod.rs  provider.rs
runtime/core_no-std/src/message/: mod.rs
runtime/core_no-std/src/transport/: consumer.rs  mod.rs  provider.rs
runtime/core_no-std/tests/setups/: mod.rs
runtime/tests/test_rt_dylib/: Cargo.toml  README.md
runtime/tests/test_rt_dylib/src/: main.rs  runtime.rs
(+155 files in other folders)
