[workspace]
resolver = "2"
members = [
    "comline",
    "core",
    "core_stdlib",
    "codelib-gen/_core",
    "codelib-gen/c",
    "codelib-gen/lua",
    "codelib-gen/luau",
    "codelib-gen/python",
    "runtime/core",
    "runtime/test_rt_dylib",
    "runtime-langs/luau",
    "runtime-langs/python",
    "package-manager",
    "package-server"
]

[profile.release]
opt-level = 2
