[workspace]
resolver = "2"
members = [
    "comline",
    "core",
    "core_stdlib",
    "codelib-gen/_core",
    "codelib-gen/c",
    "codelib-gen/lua",
    #"codelib-gen/luau",
    #"codelib-gen/python",
    "package-manager",
    "package-server",
    "runtime/core",
    "runtime/core_no-std",
    "runtime/tests/provider_consumer",
    #"runtime/tests/test_rt_dylib",
    "runtime-langs/lua",
    #"runtime-langs/luau",
    #"runtime-langs/python",
]

[profile.release]
opt-level = 2
