[package]
name = "comline-codelib-gen"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "comline_codelib_gen"
# crate-type = ["static"]

[dependencies]
abi_stable = "0.11.2"
cbindgen = "0.26.0"
comline = { version = "0.1.0", path = "../core" }
eyre = "0.6.8"
mlua =  { version = "0.9.1", features = ["lua51", "module"] }
once_cell = "1.18.0"
pyo3 = "0.19.2"
toml_edit = "0.20.0"


#[workspace]
#members = ["tests/__data__/lua"]
