[package]
name = "comline"
version = "0.1.0"
edition = "2021"


[dependencies]
eyre = "0.6.8"
once_cell = "1.17.1"
rmp = "0.8.11"

rmp-serde = "1.1.1"
serde = "1.0.164"
serde_derive = "1.0.164"

pest = "2.6.0"
pest_derive = "2.6.0"
chumsky = "0.9.2"
ariadne = { version = "0.3.0", features = ["auto-color"] }
semver = "1.0.18"
blake3 = "1.4.1"
lz4_flex = "0.11.1"
lex = "0.6.0"
snafu = { version = "0.7.5", features = ["guide"] }
strum_macros = "0.25.1"
strum = { version = "0.25.0", features = ["derive"] }
downcast-rs = "1.2.0"
handlebars = "4.3.7"
regex = "1.9.3"
num-traits = "0.2.16"
num-derive = "0.4.0"
toml_edit = "0.20.0"
glob = "0.3.1"



[dev-dependencies]
pretty_assertions = "1.4.0"
