[package]
name = "comline-package-manager"
version = "0.1.0"
edition = "2021"


[dependencies]
eyre = "0.6.8"
clap = { version = "4.3.19", features = ["derive"] }
comline = {path = "../core" }
once_cell = "1.18.0"
serde = { version = "1.0.177", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.8.1"
indicatif = "0.17.7"
glob = "0.3.1"
ratatui = "0.23.0"
crossterm = "0.27.0"

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls", "blocking"]

