[package]
name = "comline-codelib-gen"
version = "0.1.0"
edition = "2021"


# [lib]
# name = "comline_codelib_gen"
# crate-type = ["static"]


#[workspace]
#members = ["tests/__data__/lua"]


[dependencies]
comline-core = { version = "0.1.0", path = "../../core" }

eyre = "0.6.8"
once_cell = "1.18.0"
toml_edit = "0.21.0"

abi_stable = "0.11.2"
cbindgen = "0.26.0"
glob = "0.3.1"
heck = "0.4.1"
