[package]
name = "comline-runtime-lua"
version = "0.1.0"
edition = "2021"


[dependencies]
# Internal
comline-runtime = { version = "0.1.0", path = "../../runtime/core" }

# General
serde = "1.0"
serde_yaml = "0.9"

# Engines
mlua = { version = "0.9.1", features = ["lua51", "module", "serialize"] }


[lib]
name = "comline_runtime_luau"
crate-type = ["cdylib"]
