[package]
name = "comline-runtime"
version = "0.1.0"
edition = "2021"
# license = "Parity OR Prosperity"


[features]
# Temporary json_rpc because of tests, figure how to add to tests only and remove from default
default = ["std", "json_rpc"]
std = []

# Call Systems
open_rpc = []
json_rpc = ["dep:json-rpc-types"]



[dependencies]
# General
eyre = "0.6.8"
async-trait = "0.1.74"
downcast-rs = "1.2.0"
bytemuck = { version = "1.14.0", features = ["derive"] }

# ABI
abi_stable = "0.11.2"
libloading = "0.8.0"

# Network
tokio = { version = "1.33.0", features = ["sync"], default-features = false }

# Call Systems
#json_rpc_v2 = { version = "0.2.0", optional = true }
#jsonrpc = { version = "0.17.0", default-features = false, features = ["base64"], optional = true }
json-rpc-types = { version = "1.3.4", optional = true }

# Message Formats
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = "1.0.190"
serde_json = { version = "1.0.104", features = [] }


[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }

