[package]
name = "comline-runtime-core-no-std"
version = "0.1.0"
edition = "2021"


[features]
# Temporary json_rpc because of tests, figure how to add to tests only and remove from default
default = ["json_rpc"]

# Call Systems
json_rpc = ["dep:json-rpc-types"]


[dependencies]
# No STD
heapless = "0.8.0"

# General
eyre = "0.6.11"
serde = "1.0.190"
tokio = { version = "1.33.0", features = ["net", "sync"], default-features = false }

# Call Systems
json-rpc-types = { version = "1.3.4", optional = true }

# Message Formats
serde_json = { version = "1.0.104", features = [] }


[dev-dependencies]

