# Generated with Comline compiler and code generator

[package]
name = "test_runtime_dylib"
version = "0.1.0"
edition = "2021"


[dependencies]
comline-runtime = { path = "../../core" }
abi_stable = "0.11.2"
tokio = { version = "1.35.1", features = ["macros"] }

[lib]
name = "test_runtime_dylib"
crate-type = ["dylib"]
