[package]
name = "test_lua_codelib"
version = "0.0.1"
edition = "2021"

[lib]
name = "test_lib"
crate-type = ["cdylib"]

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]

[dependencies]
mlua = { version = "0.9.1",  features = ["module", "unstable"]}


# [workspace]
# members = [
#    "testcrate",
#]
